--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "version": "1.0.0",
     "description": "",
     "dependencies": {
-      "express": "^4.17.1",
-      "serverless-http": "^2.7.0"
+        "express": "^4.17.1",
+        "serverless-dynamodb-local": "^0.2.33",
+        "serverless-http": "^2.7.0"
+    },
+    "devDependencies": {
+        "serverless-offline": "^11.6.0"
     }
-  }
+}
