--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,11 @@ frameworkVersion: '2 || 3'
 
 custom:
   tableName: 'users-table-${sls:stage}'
+  dynamodb:
+    start:
+      migrate: true
+    stages:
+      - dev
 
 provider:
   name: aws
@@ -43,3 +48,6 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:custom.tableName}
+plugins:
+  - serverless-dynamodb-local
+  - serverless-offline
